# kairos

./: .env.example  .gitignore  README.md  final.tex  pyproject.toml  requirements.txt
data/: race_markers.example.json
docs/: model_equations.md
kairos/: __main__.py  cli.py  config.py  dashboard.py  db.py
kairos/ingest/: fit_parser.py  garmin_sync.py  loaders.py  quality.py
kairos/model/: fitness_fatigue.py
kairos/physio/: dynamics.py  efficiency.py  mmp.py  recovery.py  segmentation.py  trimp.py
kairos/tests/: synthetic.py  test_backfill.py  test_db.py  test_efficiency.py  test_fitness_fatigue.py  test_form_objective.py  test_form_rebuild.py  test_garmin_sync.py  test_mmp.py  test_quality.py  test_recovery.py  test_segmentation.py  test_trimp.py
